@@ -1,3 +1,7 @@
+2000-11-04  Manuel Guesdon <mguesdon@orange-concept.com>
+
+	* GSWeb.framework/GSWElementIDString.[hm]: fix bug
+
 2000-11-01  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
 	* GSWeb.framework/GSWElementIDString.m ([NSMutableString
